# my-site

./: .gitignore  Cargo.toml  RustConfig  package-lock.json  package.json  tsconfig.json
css/: default-error.css  footer.css  header.css  homepage.css  input.css  loading.css  main.css  modal.css  transition.css
css/global/: color.css  footer.css  header.css  input.css  main.css  modal.css  settings.css  theme.css
css/theme/: dark.css  light.css
fonts/css/: Anurati.css
img/favicon/: favicon_vector.ejs
js/: globals.js  header.js  homepage.js  jsx.js  modal.js  page-loader.js  test.js  theme.js
js/global/: Color.js  globals.js  header.js  inputs.js  modal.js  page-loader.js  settings.js  theme.js
server/: error.rs  lib.rs  pages.rs  templates.rs  theme.rs
servers/: Cargo.toml  account.js  admin.js  api-external.js  api-internal.js  database.js  domains.txt  index.js  init.js  paths.js  serve.js
servers/src/: lib.rs  pages.rs  theme.rs
sql/: init.sql
templates/: template.html
templates/errors/: template.html
templates/pages/: index.html  links.html
ts/: Color.ts  cookies.ts  external.d.ts  globals.ts  header.ts  inputs.ts  jsx.ts  modal.tsx  page-loader.ts  polyfill.ts  settings.ts  test.tsx  theme.ts
ts/global/: Color.ts  cookies.js  globals.js  header.ts  inputs.js  modal.js  modal.ts  page-loader.ts  theme.js
views/: helloworld.html  index.ejs  template.ejs  template.html
views/errors/: default.ejs  invalidDomain.ejs  multipleSubdomains.ejs  template.ejs  template.html
views/pages/: foo.ejs  foo.html  index.ejs  index.html  privacy-policy.ejs
views/pages/admin/: index.ejs
