[package]
name = "server"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "server/lib.rs"

[[bin]]
name = "server"
path = "server/bin/main.rs"

[dependencies]
actix-web = "3"
actix-files = "0.4"
tera = "1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Possibly add a feature for this, because it isn't required in prod
notify = "4"